[package]
name = "webapp_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
http="0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = " 0.5.7", features = [ "runtime-actix-native-tls", "postgres" ] }

actix-rt = "2.6" 
[dev-dependencies]
actix-rt = "2.6"  